# surveys

./: README.md  docker-compose.yaml
api/: .dockerignore  .gitignore  Dockerfile  flake.nix  pyproject.toml
api/scripts/: entrypoint.sh
api/src/api/: __main__.py  locks.py  server.py  state.py
api/src/api/api/: app.py  exceptions.py
api/src/api/api/routes/: router.py
api/src/api/api/routes/forms/: controller.py  errors.py  models.py  router.py  service.py
api/src/api/config/: base.py  builder.py  models.py
api/src/api/graphql/: client.py  errors.py  models.py
api/src/api/models/: data.py
database/: Dockerfile
database/cfg/: postgres.conf
database/src/: start.sh
graphql/: Dockerfile
graphql/src/: start.sh
redis/: Dockerfile
redis/cfg/: redis.conf
redis/src/: start.sh
traefik/: Dockerfile
traefik/cfg/: dynamic.yaml  static.yaml
traefik/src/: start.sh
web/: Dockerfile
web/src/: start.sh
