[tool.poetry]
name = "api"
version = "0.1.0"
description = "surveys api"
authors = ["radio-aktywne <it@radioaktywne.pl>"]

[tool.poetry.dependencies]
python = "^3.11"
# Pydantic is used to define data models
pydantic = "^2.4"
pydantic-settings = "^2.0"
# OmegaConf is used to load configuration
omegaconf = "^2.3"
# Typer and Rich are used to build CLIs
typer = { version = "^0.9", extras = ["all"] }
rich = "^13.6"
# Litestar and Uvicorn are used to build async APIs
litestar = "^2.2"
uvicorn = { version = "^0.23", extras = ["standard"] }
# GraphQL client
gql = { version = "^3.5.0b0", extras = ["httpx"], allow-prereleases = true }
# Better locks
fifolock = "^0.0"

[tool.poetry.scripts]
# Register CLI
api = "api.__main__:cli"

# See: https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
